# tjlb-rust

./: .gitignore  Cargo.toml  TODO.md  compile-file.sh  test.ast  test.tjlb
demos/: ask_name.tjlb
src/: lib.rs  main.rs
src/codegen/: errors.rs  generator.rs  mod.rs  types.rs
src/lexer/: errors.rs  mod.rs  scanner.rs  tokens.rs
src/parser/: ast.rs  errors.rs  expressions.rs  mod.rs  statements.rs  types.rs
src/symbol/: mod.rs  scope.rs  table.rs
tests/: integration_tests.rs
tests/programs/: arithmetic.tjlb  array_access.tjlb  bitwise.tjlb  conditionals.tjlb  fibonacci.tjlb  global_vars.tjlb  loops.tjlb  pointer_arithmetic.tjlb  pointers.tjlb  return_42.tjlb
